<resources>
    <string name="app_name">VSA+</string>
    <string name="user_name">Unknown</string>
    //profile
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="bookmark">Bookmark</string>
    //activity_signup
    <string name="join_us">Join VSA+. Always be learning!</string>
    <string name="sync">Your progress will be in sync no matter which phone you\'re using.</string>
    <string name="email_signup">Sign up with email</string>
    <string name="signin">Sign in</string>
    <string name="ask_user">Already a user?</string>

    //facebook
    <string name="facebook_app_id">2084538421841975</string>
    <string name="fb_login_protocol_scheme">fb2084538421841975</string>
    <string name="facebook_signup">Continue with Facebook</string>

    //activity_signin
    <string name="enterid">Enter an e-mail address or username</string>
    <string name="password">Password</string>
    <string name="facebook_signin">Sign in with Facebook</string>

    //fragment_signupinfo
    <string name="give_info">Let us know about yourself to create your account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="player_error">Error initializing Youtube player : %s</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="fullscreen_tutorial">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>


    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>

    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    //fragment_verification_sent
    <string name="email_code">Verification code on your email</string>

    <string name="email_code_sent">We have sent verification code on your id</string>

    //password rest
    <string name="password_reset">A link will be sent to your email for your password reset.</string>

    //bookmark fragment
    <string name="bookmark_unavailable">We are currently working hard on this feature. Sorry for the inconvenience.</string>

    <string name = "license">VSA for Android</string>

</resources>
