<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_us"
            android:gravity="center"
            android:fontFamily="@font/leelawui"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sync"
            android:gravity="center"
            android:fontFamily="@font/leelawadee"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/facebook_login_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/facebook"
            android:drawableStart="@drawable/ic_facebook"
            android:onClick="onClickFacebookButton"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/facebook_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </FrameLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/email_signup_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/email"
            android:drawableStart="@drawable/ic_email"
            android:fontFamily="@font/leelawadee"
            android:onClick="Sign_up_buttonClicked"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/email_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ask_user"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"

            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/leelawadee"
            android:onClick="Sign_in"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />


    </RelativeLayout>

</LinearLayout>